@@ -1,3 +1,11 @@
+2009-07-29  Kai Tietz  <kai.tietz@onevision.com>
+
+	* intrincs/__stosd.c: New.
+	* intrincs/__stosq.c: New.
+	* intrincs/__stosw.c: New.
+	* Makefile.am: Add new files above.
+	* Makefile.in: Regenerated.
+
 2009-07-29  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* intrincs/dbgassert.c: Deleted. (made into a macro in winnt.h)
